refactor!: removed reverseQuote field from the schemas
